# clicker

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.bat  build.sh
lib/: README.md
src/: main.cpp
